--- a/chatbot/docker-compose.yml
+++ b/chatbot/docker-compose.yml
@@ -1,24 +1,46 @@
-version : "3.3"
+version: "3.8"
+
 services:
   mariadb:
-    image: mariadb:latest
+    image: mariadb:10.11
+    container_name: bobbot-mariadb
+    restart: unless-stopped
     ports:
-      - 3306:3306
+      - "3306:3306"
     volumes:
-      - bob-mariadb-data:/var/lib/mysql
+      - mariadb_data:/var/lib/mysql
+      - ./init_db.sql:/docker-entrypoint-initdb.d/init_db.sql
     environment:
-      MYSQL_ROOT_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
+
   api:
-    image: <>
+    build: .
+    container_name: bobbot-api
+    restart: unless-stopped
     ports:
-      - 80:8080
+      - "8000:8000"
     environment:
-      DB_PASSWORD: password
-      LOG_LVL: debug
       PYTHONUNBUFFERED: 1
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_NAME: ${DB_NAME}
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
+      SLACK_BOT_TOKEN: ${SLACK_BOT_TOKEN}
+      SLACK_APP_TOKEN: ${SLACK_APP_TOKEN}
     depends_on:
-      - mariadb
-    command:
-      sh -c "./start.sh"
+      mariadb:
+        condition: service_healthy
+    volumes:
+      - ./conf.docker.json:/app/conf.json
+
 volumes:
-  bob-mariadb-data:
+  mariadb_data:
