--- a/chatbot/requirements.txt
+++ b/chatbot/requirements.txt
@@ -10,6 +10,7 @@ passlib[bcrypt]>=1.7.4
 alembic>=1.7.0
 slack-sdk>=3.19.0
 slack-bolt>=1.14.0
+aiohttp>=3.8.0
 requests>=2.28.0
 beautifulsoup4>=4.11.0
 lxml>=4.9.0
